making changes to the excuses

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="card">
                 <div class="heart-animation"></div>
                 <div class="message">
-                    <p>Dear Valentine,</p>
+                    <p>Dear Akshuma,</p>
                     <p class="love-message">Every moment with you is magical...</p>
                 </div>
                 <div class="buttons">
